--- a/index.html
+++ b/index.html
@@ -1,7 +1,168 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Global Game Tech</title><link rel="stylesheet" href="assets/css/style.css"></head><body>
-<header class="header"><div class="container"><div class="logo">G</div><nav><a href="index.html">Home</a> | <a href="contact.html">Contact</a></nav></div></header>
-<main class="container"><section class="card"><h1>Precision Sports Video Tagging & Analytics — Delivered Fast</h1><p>Multi-sport expertise. Enterprise-level accuracy. 12–24 hr turnaround.</p></section>
-<section class="card"><h3>Trusted by analytics teams</h3><p>Trusted by leading sports analytics platforms and professional teams worldwide. We provide secure, white-label tagging and analytics services tailored to enterprise workflows.</p></section>
-<section class="card"><h3>Demo Dashboard</h3><div style="height:220px;background:#071022;border-radius:8px;padding:12px;color:#9aa7b2">[Dashboard mockup here]</div></section></main>
-<footer class="footer"><div class="container"><p>Email: info@globalgametech.com<br/>Location: Mysuru, Karnataka<br/>Phone: +91 77956 31670</p></div></footer></body></html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Global Game Tech — Precision Sports Video Tagging & Analytics</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <meta name="description" content="Global Game Tech — Accurate sports video tagging, analytics and dashboard delivery. 12+ years experience. White-label services for analytics platforms." />
+</head>
+<body>
+  <header class="header" style="background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);border-bottom:1px solid rgba(255,255,255,0.03)">
+    <div class="container" style="display:flex;align-items:center;justify-content:space-between;padding:18px 20px">
+      <div style="display:flex;align-items:center;gap:12px">
+        <div class="logo" style="width:44px;height:44px;border-radius:8px;background:linear-gradient(135deg,#0A84FF,#6ddcff);display:flex;align-items:center;justify-content:center;font-weight:700;color:#0d1117">G</div>
+        <div>
+          <h1 style="margin:0;font-size:18px">Global Game Tech</h1>
+          <div style="color:#9aa7b2;font-size:12px">Precision sports video tagging & analytics</div>
+        </div>
+      </div>
+      <nav class="nav" style="display:flex;gap:14px;align-items:center">
+        <a href="index.html" style="color:#9aa7b2;text-decoration:none">Home</a>
+        <a href="solutions.html" style="color:#9aa7b2;text-decoration:none">Solutions</a>
+        <a href="sports.html" style="color:#9aa7b2;text-decoration:none">Sports</a>
+        <a href="careers.html" style="color:#9aa7b2;text-decoration:none">Careers</a>
+        <a href="contact.html" class="btn" style="background:#0A84FF;color:#0d1117;padding:10px 14px;border-radius:8px;text-decoration:none;font-weight:600">Get a Quote</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container" style="max-width:1100px;margin:0 auto;padding:40px 20px">
+    <!-- Hero -->
+    <section class="hero" style="display:grid;grid-template-columns:1fr 420px;gap:40px;align-items:center;padding:60px 0">
+      <div>
+        <h2 style="font-size:40px;margin:0 0 12px;line-height:1.05">Precision Sports Video Tagging &amp; Analytics — Delivered Fast</h2>
+        <p style="color:#9aa7b2;font-size:18px;margin-bottom:20px">Multi-sport expertise. Enterprise-level accuracy. 12–24 hour turnaround for most matches.</p>
+        <a href="contact.html" class="btn" style="background:#0A84FF;color:#0d1117;padding:12px 16px;border-radius:8px;text-decoration:none;font-weight:700">Get a Quote</a>
+
+        <div style="margin-top:30px" class="card">
+          <h3 style="margin-top:0">What we do</h3>
+          <p style="color:#9aa7b2;margin:6px 0">Accurate event-level tagging, highlight creation, tactical analysis and white-label data delivery for analytics platforms and coaching teams.</p>
+
+          <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:18px">
+            <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px">
+              <strong>Video Tagging</strong>
+              <div style="color:#9aa7b2;font-size:13px;margin-top:6px">Event-level logs, CSV/JSON exports.</div>
+            </div>
+            <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px">
+              <strong>Analytics</strong>
+              <div style="color:#9aa7b2;font-size:13px;margin-top:6px">Player & team metrics ready for dashboards.</div>
+            </div>
+            <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px">
+              <strong>White-label</strong>
+              <div style="color:#9aa7b2;font-size:13px;margin-top:6px">Secure, NDA-backed outsourcing for analytics platforms.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Dashboard mockup -->
+      <aside>
+        <div style="background:#0f1720;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.03)">
+          <!-- Video area -->
+          <div style="background:linear-gradient(90deg,#081226,#071122);border-radius:8px;height:180px;display:flex;align-items:center;justify-content:center">
+            <div style="width:72px;height:72px;border-radius:50%;background:rgba(255,255,255,0.04);display:flex;align-items:center;justify-content:center;font-size:30px;color:#9aa7b2">▶</div>
+          </div>
+
+          <!-- Stats -->
+          <div style="display:flex;gap:8px;margin-top:12px">
+            <div style="flex:1;background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;text-align:center">
+              <div style="font-size:18px;font-weight:700;color:#0A84FF">24</div>
+              <div style="color:#9aa7b2;font-size:12px">Events tagged</div>
+            </div>
+            <div style="flex:1;background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;text-align:center">
+              <div style="font-size:18px;font-weight:700;color:#0A84FF">8</div>
+              <div style="color:#9aa7b2;font-size:12px">Key plays</div>
+            </div>
+            <div style="flex:1;background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;text-align:center">
+              <div style="font-size:18px;font-weight:700;color:#0A84FF">3</div>
+              <div style="color:#9aa7b2;font-size:12px">Highlights</div>
+            </div>
+          </div>
+
+          <!-- Player mini card -->
+          <div style="display:flex;gap:8px;margin-top:12px">
+            <div style="flex:1;background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);padding:10px;border-radius:8px">
+              <div style="font-weight:700">A. Kumar</div>
+              <div style="color:#9aa7b2;font-size:13px;margin-top:6px">Shots: 6 &middot; Assists: 3 &middot; Rebounds: 4</div>
+              <svg width="100%" height="44" viewBox="0 0 100 44" preserveAspectRatio="none" style="margin-top:8px">
+                <rect x="6" y="18" width="10" height="26" rx="2" fill="#0A84FF"></rect>
+                <rect x="22" y="8" width="10" height="36" rx="2" fill="#6ddcff"></rect>
+                <rect x="38" y="28" width="10" height="16" rx="2" fill="#0A84FF"></rect>
+                <rect x="54" y="14" width="10" height="30" rx="2" fill="#6ddcff"></rect>
+                <rect x="70" y="20" width="10" height="24" rx="2" fill="#0A84FF"></rect>
+              </svg>
+            </div>
+          </div>
+
+          <div style="display:flex;gap:8px;margin-top:12px">
+            <a href="contact.html" class="btn" style="flex:1;background:#0A84FF;color:#0d1117;text-decoration:none;padding:10px;border-radius:8px;text-align:center">Request Sample</a>
+            <a href="contact.html" style="flex:1;border-radius:8px;padding:10px;background:rgba(255,255,255,0.02);color:#9aa7b2;text-align:center;display:inline-block;text-decoration:none">Request Quote</a>
+          </div>
+        </div>
+      </aside>
+    </section>
+
+    <!-- Trusted line -->
+    <section class="section" style="padding:30px 0">
+      <div class="card" style="padding:20px">
+        <h3 style="margin-top:0">Trusted by analytics teams</h3>
+        <p style="color:#9aa7b2;margin:6px 0">Trusted by leading global sports analytics companies and professional teams worldwide. We provide secure, white-label tagging and analytics services tailored to enterprise workflows.</p>
+      </div>
+    </section>
+
+    <!-- Sports supported -->
+    <section class="section" style="padding:30px 0">
+      <div class="card" style="padding:20px">
+        <h3 style="margin-top:0">Sports we support</h3>
+        <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin-top:12px">
+          <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px;text-align:center">Basketball</div>
+          <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px;text-align:center">Volleyball</div>
+          <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px;text-align:center">Lacrosse</div>
+          <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px;text-align:center">Ice Hockey</div>
+          <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px;text-align:center">Soccer</div>
+          <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px;text-align:center">American Football</div>
+          <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px;text-align:center">Softball</div>
+          <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:8px;text-align:center">Custom Templates</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section style="padding:30px 0">
+      <div style="background:linear-gradient(90deg, rgba(10,132,255,0.12), rgba(109,220,255,0.06));padding:22px;border-radius:12px;display:flex;justify-content:space-between;align-items:center">
+        <div>
+          <h3 style="margin:0">Ready to scale your video analysis?</h3>
+          <p style="margin:6px 0;color:#9aa7b2">Contact us for a custom quote or a free sample tagging.</p>
+        </div>
+        <div><a href="contact.html" class="btn" style="background:#0A84FF;color:#0d1117;padding:12px 14px;border-radius:8px;text-decoration:none">Get a Quote</a></div>
+      </div>
+    </section>
+  </main>
+
+  <footer style="padding:40px 20px;border-top:1px solid rgba(255,255,255,0.03);color:#9aa7b2">
+    <div class="container" style="max-width:1100px;margin:0 auto;display:flex;justify-content:space-between;gap:20px;flex-wrap:wrap">
+      <div style="min-width:220px">
+        <h3 style="margin:0 0 8px;color:#ffffff">Global Game Tech</h3>
+        <p style="margin:0 0 8px;color:#9aa7b2">Professional sports video tagging & analytics — 12+ years of expertise. White-label solutions for analytics platforms.</p>
+        <p style="margin:0;color:#9aa7b2">Email: <a href="mailto:info@globalgametech.com" style="color:#9aa7b2;text-decoration:underline">info@globalgametech.com</a><br/>Location: Mysuru, Karnataka<br/>Phone: +91 77956 31670</p>
+      </div>
+
+      <div style="min-width:220px">
+        <h4 style="margin:0 0 8px;color:#ffffff">Quick Links</h4>
+        <div style="display:flex;flex-direction:column;gap:6px">
+          <a href="solutions.html" style="color:#9aa7b2;text-decoration:none">Solutions</a>
+          <a href="sports.html" style="color:#9aa7b2;text-decoration:none">Sports</a>
+          <a href="careers.html" style="color:#9aa7b2;text-decoration:none">Careers</a>
+          <a href="contact.html" style="color:#9aa7b2;text-decoration:none">Contact</a>
+        </div>
+      </div>
+
+      <div style="min-width:220px">
+        <h4 style="margin:0 0 8px;color:#ffffff">Trusted partners</h4>
+        <p style="margin:0;color:#9aa7b2">Trusted by leading sports analytics platforms and professional teams.</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
