--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <main id="main-content" class="main-content">
     
     <!-- Hero Section / Home -->
-    <section id="home" class="hero section-padding">
+    <section id="home" class="hero section-padding scroll-section">
       <div class="container">
         <div class="hero-grid">
           <div class="hero-content" data-aos="fade-right">
@@ -175,7 +175,7 @@
     </section>
 
     <!-- Solutions Section -->
-    <section id="solutions" class="solutions-section section-padding">
+    <section id="solutions" class="solutions-section section-padding scroll-section">
       <div class="container">
         <div class="section-header" data-aos="fade-up">
           <span class="section-badge">What We Offer</span>
@@ -285,7 +285,7 @@
     </section>
 
     <!-- Sports Section -->
-    <section id="sports" class="sports-section section-padding">
+    <section id="sports" class="sports-section section-padding scroll-section">
       <div class="container">
         <div class="section-header" data-aos="fade-up">
           <span class="section-badge">Multi-Sport Expertise</span>
@@ -376,7 +376,7 @@
     </section>
 
     <!-- Careers Section -->
-    <section id="careers" class="careers-section section-padding">
+    <section id="careers" class="careers-section section-padding scroll-section">
       <div class="container">
         <div class="section-header" data-aos="fade-up">
           <span class="section-badge">Join Our Team</span>
@@ -449,7 +449,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section id="faq" class="faq-section section-padding">
+    <section id="faq" class="faq-section section-padding scroll-section">
       <div class="container">
         <div class="section-header" data-aos="fade-up">
           <span class="section-badge">Got Questions?</span>
@@ -532,8 +532,8 @@
       </div>
     </section>
 
-    <!-- Contact Section (No Form - Contact Info Only) -->
-    <section id="contact" class="contact-section section-padding">
+    <!-- Contact Section (2 Cards Only - Email & Location) -->
+    <section id="contact" class="contact-section section-padding scroll-section">
       <div class="container">
         <div class="contact-content-center" data-aos="fade-up">
           <span class="section-badge">Let's Talk</span>
@@ -552,16 +552,6 @@
             </div>
 
             <div class="contact-item-large" data-aos="zoom-in" data-aos-delay="200">
-              <div class="contact-icon-large">
-                <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
-                  <path d="M22 16.92V19.92C22 20.52 21.5 21.03 20.9 21.03C9.4 20.07 2 12.67 2 1.17C2 0.57 2.5 0.07 3.1 0.07H6.1C6.7 0.07 7.2 0.57 7.2 1.17C7.2 2.37 7.4 3.53 7.8 4.63C7.9 4.93 7.8 5.23 7.6 5.43L5.9 7.13C7.6 10.53 10.5 13.43 13.9 15.13L15.6 13.43C15.8 13.23 16.1 13.13 16.4 13.23C17.5 13.63 18.7 13.83 19.9 13.83C20.5 13.83 21 14.33 21 14.93V16.93C22 16.92 22 16.92 22 16.92Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-              </div>
-              <h4 class="contact-label">Phone</h4>
-              <a href="tel:+917795631670" class="contact-value">+91 77956 31670</a>
-            </div>
-
-            <div class="contact-item-large" data-aos="zoom-in" data-aos-delay="300">
               <div class="contact-icon-large">
                 <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
                   <path d="M21 10C21 17 12 23 12 23C12 23 3 17 3 10C3 5.03 7.03 1 12 1C16.97 1 21 5.03 21 10Z" stroke="currentColor" stroke-width="2"/>
@@ -618,8 +608,7 @@
           <h4 class="footer-title">Contact</h4>
           <ul class="footer-contact">
             <li><a href="mailto:info@globalgametech.com">info@globalgametech.com</a></li>
-            <li><a href="tel:+917795631670">+91 77956 31670</a></li>
-            <li>Mysuru, Karnataka</li>
+            <li>Mysuru, Karnataka, India</li>
           </ul>
         </div>
       </div>
